archive/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-mt-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: hhtp-port
        - containerPort: 11443
          name: https-port
