archive/service-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-mt-svc
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - name: nginx-port
    protocol: TCP
    port: 80
    nodePort: 30001
  - name: multitool-port
    protocol: TCP
    port: 8080
    nodePort: 30002
